force-app/main/default/objects/Kiva_Client__c/Kiva_Client__c.object-meta.xml
<CustomObject>
    <label>Kiva Client</label>
    <nameField>
        <label>Kiva Client Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Kiva Clients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>