force-app/main/default/objects/Kiva_Client__c/fields/Bank_Details_Photo_URL__c.field-meta.xml
<CustomField>
    <fullName>Bank_Details_Photo_URL__c</fullName>
    <label>Bank Details Photo URL</label>
    <type>Url</type>
</CustomField>