force-app/main/default/objects/Kiva_Client__c/fields/Client_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_First_Name__c</fullName>
    <label>Client First Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>