force-app/main/default/objects/Kiva_Client__c/fields/Client_Phone__c.field-meta.xml
<CustomField>
    <fullName>Client_Phone__c</fullName>
    <label>Client Phone #</label>
    <length>18</length>
    <type>Text</type>
</CustomField>