force-app/main/default/objects/Kiva_Client__c/fields/ID_Card__c.field-meta.xml
<CustomField>
    <fullName>ID_Card__c</fullName>
    <label>ID Card (URL)</label>
    <type>Url</type>
</CustomField>