force-app/main/default/objects/Kiva_Client__c/fields/ID_Card_Back_URL__c.field-meta.xml
<CustomField>
    <fullName>ID_Card_Back_URL__c</fullName>
    <label>ID Card - Back (URL)</label>
    <type>Url</type>
</CustomField>