force-app/main/default/objects/Kiva_Client__c/fields/M_pesa_account__c.field-meta.xml
<CustomField>
    <fullName>M_pesa_account__c</fullName>
    <label>M-pesa account</label>
    <length>18</length>
    <type>Text</type>
</CustomField>