force-app/main/default/objects/Kiva_Client__c/fields/MZ_Distrito__c.field-meta.xml
<CustomField>
    <fullName>MZ_Distrito__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MZ - Distrito</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>MZ_Distrito__c.Provincia__c</field>
            <operation>equals</operation>
            <valueField>$Source.MZ_Provincia__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>MZ_Distrito__c</referenceTo>
    <relationshipLabel>Kiva Clients</relationshipLabel>
    <relationshipName>Kiva_Clients</relationshipName>
    <type>Lookup</type>
</CustomField>