force-app/main/default/objects/Kiva_Client__c/fields/MZ_Posto_Administrativo__c.field-meta.xml
<CustomField>
    <fullName>MZ_Posto_Administrativo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MZ - Posto Administrativo</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>MZ_Posto_Administrativo__c.Distrito__c</field>
            <operation>equals</operation>
            <valueField>$Source.MZ_Distrito__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>MZ_Posto_Administrativo__c</referenceTo>
    <relationshipLabel>Kiva Clients</relationshipLabel>
    <relationshipName>Kiva_Clients</relationshipName>
    <type>Lookup</type>
</CustomField>