force-app/main/default/objects/Kiva_Client__c/fields/MZ_Provincia__c.field-meta.xml
<CustomField>
    <fullName>MZ_Provincia__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MZ - Provincia</label>
    <referenceTo>MZ_Provincia__c</referenceTo>
    <relationshipLabel>Kiva Clients</relationshipLabel>
    <relationshipName>Kiva_Clients</relationshipName>
    <type>Lookup</type>
</CustomField>