force-app/main/default/objects/Kiva_Client__c/fields/Risky_Loans_Borrower__c.field-meta.xml
<CustomField>
    <fullName>Risky_Loans_Borrower__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Risky Loans/Borrower</label>
    <type>Checkbox</type>
</CustomField>