force-app/main/default/objects/Kiva_Client__c/fields/Type_of_Borrower__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Borrower__c</fullName>
    <label>Type of Borrower</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ADA</fullName>
            </value>
            <value>
                <fullName>Agrodealer</fullName>
            </value>
            <value>
                <fullName>Savings Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>