force-app/main/default/objects/Kiva_Client__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>MZ_Distrito__c</columns>
    <columns>MZ_Provincia__c</columns>
    <columns>Client_Phone__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Client_ID__c</columns>
    <columns>Client_First_Name__c</columns>
    <columns>Client_Last_Name__c</columns>
    <columns>Gender__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>